@@ -12,8 +12,8 @@ LoadModule dav_module /etc/httpd/modules/mod_dav.so
 LoadModule dav_fs_module /etc/httpd/modules/mod_dav_fs.so
 LoadModule auth_digest_module /etc/httpd/modules/mod_auth_digest.so
 
-DocumentRoot ${HOME}/Public
-<Directory "${HOME}/Public">
+DocumentRoot ${XDG_PUBLICSHARE_DIR}
+<Directory "${XDG_PUBLICSHARE_DIR}">
   AllowOverride None
   DAV On
 
