@@ -14,8 +14,8 @@ LoadModule authn_file_module /etc/httpd/modules/mod_authn_file.so
 LoadModule auth_digest_module /etc/httpd/modules/mod_auth_digest.so
 LoadModule authz_groupfile_module /etc/httpd/modules/mod_authz_groupfile.so
 
-DocumentRoot ${HOME}/Public
-<Directory "${HOME}/Public">
+DocumentRoot ${XDG_PUBLICSHARE_DIR}
+<Directory "${XDG_PUBLICSHARE_DIR}">
   AllowOverride None
   DAV On
 
