@@ -67,6 +67,86 @@ static GMainLoop *loop = NULL;
 static pid_t httpd_pid = 0;
 static guint disabled_timeout_tag = 0;
 
+static char *
+lookup_public_dir (void)
+{
+  FILE *file;
+  char *config_file;
+  char buffer[512];
+  char *user_dir;
+  char *p, *d;
+  int len;
+  int relative;
+  
+  config_file = g_build_filename (g_get_user_config_dir (), "user-dirs.dirs", NULL);
+  file = fopen (config_file, "r");
+  free (config_file);
+  if (file == NULL)
+	  goto error;
+  
+  user_dir = NULL;
+  while (fgets (buffer, sizeof (buffer), file)) {
+	  /* Remove newline at end */
+	  len = strlen (buffer);
+      if (len > 0 && buffer[len-1] == '\n')
+		  buffer[len-1] = 0;
+      
+      p = buffer;
+      while (*p == ' ' || *p == '\t')
+		  p++;
+      
+      if (!g_str_has_prefix (p, "XDG_PUBLICSHARE_DIR"))
+		  continue;
+      p += strlen ("XDG_PUBLICSHARE_DIR");
+	  
+      while (*p == ' ' || *p == '\t')
+		  p++;
+	  
+      if (*p != '=')
+		  continue;
+      p++;
+      
+      while (*p == ' ' || *p == '\t')
+		  p++;
+	  
+      if (*p != '"')
+		  continue;
+      p++;
+      
+      relative = 0;
+      if (strncmp (p, "$HOME/", 6) == 0) {
+		  p += 6;
+		  relative = 1;
+	  }
+      else if (*p != '/')
+		  continue;
+      
+      if (relative)	{
+		  user_dir = g_malloc (strlen (g_get_home_dir()) + 1 + strlen (p) + 1);
+		  strcpy (user_dir, g_get_home_dir ());
+		  strcat (user_dir, "/");
+	  } else {
+		  user_dir = g_malloc (strlen (p) + 1);
+		  *user_dir = 0;
+	  }
+      
+      d = user_dir + strlen (user_dir);
+      while (*p && *p != '"') {
+		  if ((*p == '\\') && (*(p+1) != 0))
+			  p++;
+		  *d++ = *p++;
+	  }
+      *d = 0;
+  }  
+  fclose (file);
+  
+  if (user_dir)
+	  return user_dir;
+  
+ error:
+  return g_build_filename (g_get_home_dir (), "Public", NULL);
+}
+
 static int
 get_port (void)
 {
@@ -337,15 +417,11 @@ stop_publishing (void)
 
 
 static void
-ensure_public_dir (void)
+ensure_public_dir (char *dirname)
 {
-    char *dirname;
-
-    dirname = g_build_filename (g_get_home_dir (), "Public", NULL);
     if (!g_file_test (dirname, G_FILE_TEST_IS_DIR)) {
 		mkdir (dirname, 0755);
     }
-    g_free (dirname);
 }
 
 static void
@@ -387,7 +463,7 @@ httpd_child_setup (gpointer user_data)
 static gboolean
 spawn_httpd (int port, pid_t *pid_out)
 {
-    char *free1, *free2;
+    char *free1, *free2, *free3;
     gboolean res;
     char *argv[10];
     char *env[10];
@@ -399,8 +475,11 @@ spawn_httpd (int port, pid_t *pid_out)
     gboolean got_pidfile;
     GConfClient *client;
     char *str;
+	char *public_dir;
 
-    ensure_public_dir ();
+	public_dir = lookup_public_dir ();
+	
+    ensure_public_dir (public_dir);
     ensure_conf_dir ();
 
     i = 0;
@@ -431,6 +510,7 @@ spawn_httpd (int port, pid_t *pid_out)
 
     i = 0;
     free2 = env[i++] = g_strdup_printf("HOME=%s", g_get_home_dir());
+    free3 = env[i++] = g_strdup_printf("XDG_PUBLICSHARE_DIR=%s", public_dir);
     env[i++] = "LANG=C";
     env[i] = NULL;
 
@@ -448,7 +528,9 @@ spawn_httpd (int port, pid_t *pid_out)
 			&error);
     g_free (free1);
     g_free (free2);
-    
+    g_free (free3);
+	g_free (public_dir);
+
     if (!res) {
 		fprintf (stderr, "error spawning httpd: %s\n",
 				 error->message);
